test/domains/sungeun/assoc/index_not_in_domain_1.good
268435455 536870911 1073741823 2147483647
134217727 268435455 536870911 1073741823 2147483647
index_not_in_domain_1.chpl:18: error: halt reached - index not in domain: 134217727
